# split

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yaml  openapi-config.yaml  template.env
.github/workflows/: backend-integration.yaml  ci.yaml  openapi-validate.yaml  server-cargo-check.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/openapi-models/: Cargo.toml  README.md
backend/openapi-models/.openapi-generator/: FILES
backend/openapi-models/docs/: CreateUserPayload.md  ErrorResponse.md  LoginUserPayload.md  User.md
backend/openapi-models/src/apis/: configuration.rs
backend/openapi-models/src/models/: create_user_payload.rs  error_response.rs  login_user_payload.rs  mod.rs  user.rs
backend/src/: app.rs  config.rs  main.rs
backend/src/auth/: entities.rs  handler.rs  middleware.rs  mod.rs  routes.rs
backend/src/entities/: group.rs  user.rs
backend/src/handler/: misc_handler.rs  mod.rs  user_handler.rs
backend/src/misc/: routes.rs
backend/src/user/: mod.rs  routes.rs
config/: dev.env
deployment/: backend.Dockerfile  frontend.Dockerfile
documentation/: index.html
frontend/: Caddyfile  Dockerfile  package.json
frontend/src/: App.tsx
frontend/src/components/: app-sidebar.tsx  nav-main.tsx  payments-card.tsx
frontend/src/components/ui/: breadcrumb.tsx  card.tsx
frontend/src/hooks/: use-fetch.ts
migrations/: 0001_init.sql  init.sql
openapi/: common.yaml  user.yaml
openapi-spec/: user.yaml
src/: handler.rs  jwt_auth.rs  main.rs  model.rs  ratelimiter.rs  user_handler.rs
src/client/: .gitkeep  index.html  package-lock.json  package.json  tsconfig.json
src/client/src/: App.tsx  index.css
src/client/src/components/: authentication.tsx
src/common/: constants.rs
src/handler/: user_handler.rs
src/repository/: group_repository.rs  mod.rs  user_repository.rs
