[package]
name = "split"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }

[dev-dependencies]
clippy = "0.0.302"

[build-dependencies]
dotenv = "0.15.0"
