[package]
name = "split"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = { version = "0.4.22", features = ["serde"] }
redis = { version = "0.25.4", features = ["tokio"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
openapi = { path = "./target/openapi"}
actix-session = { version = "0.9.0", features = ["cookie-session"] }
jiff = "0.1.4"
bcrypt = "0.15.1"

[dev-dependencies]
clippy = "0.0.302"

[build-dependencies]
dotenv = "0.15.0"
