[package]
name = "split"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = { version = "0.4.22", features = ["kv", "serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.38.0", features = ["full"] }
actix-session = { version = "0.10.0", features = ["cookie-session", "redis-session"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
config = "0.14.0"
anyhow = "1.0.92"
dotenv = "0.15.0"
uuid = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
openapi = { path = "openapi-models" }
redis = "0.28.2"
thiserror = "2.0.11"

[dev-dependencies]
clippy = "0.0.302"

[build-dependencies]
dotenv = "0.15.0"
